--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -1,5 +1,5 @@
 {% extends "base_auth.html" %}
-
+{% load static %}
 {% block content  %}
 
 <div class="row">
@@ -18,16 +18,20 @@
     </div>
     
 
-    <form action="" method="post">
+    <form action="" method="POST">
         
         {% csrf_token %}
         <div class="form-group">
-            <input type="text" placeholder="Username" name="username" id="username" class="form-control" class="form-control-sm">
+            <input type="text" placeholder="Username" name="username" id="usernameField" class="form-control" class="form-control-sm">
 
 
 
         </div>
+<div class="invalid-feedback" style="display:none">
+    <p></p>
 
+
+</div>
 
         <div class="form-group">
             <input type="email" placeholder="Email field" name="" id="emailfield" class="form-control" id="emailField"  class="form-control-sm">
@@ -68,6 +72,8 @@
 </div>
     <div class="col-md-4"></div>
 </div>
+
+<script src="{% static 'js/register.js' %}"></script>
 
 
 
