--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -16,13 +16,22 @@
     <div class="card-title py-3">
         <h4>Register for free account</h4>
     </div>
+
+
+   
+
+
+
+
     
 
-    <form action="" method="POST">
+    <form action="{% url 'register' %}" method="post">
         
         {% csrf_token %}
+
+        {% include "partials/messages.html" %}
         <div class="form-group">
-            <input type="text" placeholder="Username" name="username" id="usernameField"  class="form-control form-control-sm">
+            <input type="text" placeholder="Username" name="username" id="usernameField"  class="form-control form-control-sm" value="{{fieldValues.username}}">
 
 
 
@@ -34,7 +43,7 @@
 <p class="text-sm text-success usernamesuccessOutput"></p>
 
         <div class="form-group">
-            <input type="email" placeholder="Email field" name="" id="emailfield" class="form-control" id="emailField" class="form-control form-control-sm">
+            <input type="email" placeholder="Email field" name="email" id="emailfield" class="form-control" id="emailField" class="form-control form-control-sm" value="{{fieldValues.email}}">
 
 
 
@@ -52,7 +61,7 @@
 
 
 
-        <input type="submit" value="Register" class="btn btn-block btn-primary">
+        <input type="submit" value="Register" class="btn btn-block btn-primary submit-btn">
 
     </form>
 </div>
