--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -1,15 +1,72 @@
 {% extends "base_auth.html" %}
-
+{% load static %}
 {% block content  %}
 
-<div class="card">
+<div class="row">
+    <div class="col-md-4"></div>
+    <div class="col-md-4">
 
-    <div class="card-body">
-        <h1>Login</h1>
+
+
+
+    <div class="card mt-5">
+
+
+<div class="card-body">
+    <div class="card-title py-3">
+        <h4>Login to your account</h4>
+    </div>
+
+
+   
+
+
+
+
+    
+
+    <form action="{% url 'login' %}" method="post">
+        
+        {% csrf_token %}
+
+        {% include "partials/messages.html" %}
+        <div class="form-group">
+            <input type="text" placeholder="Username" name="username" id="usernameField"  class="form-control form-control-sm" value="{{fieldValues.username}}">
+
+
+
+        </div>
+
+
+
+        <div class="form-group">
+            <input type="password" placeholder="Password" name="password" id="PasswordField" class="form-control"  class="form-control-sm">
+
+
+        </div>
+
+
+
+
+
+
+        <input type="submit" value="Login" class="btn btn-block btn-primary submit-btn">
+
+    </form>
+</div>
+</div>
 
     </div>
 
+
+
+
+
 </div>
+    <div class="col-md-4"></div>
+</div>
+
+<script src="{% static 'js/register.js' %}"></script>
 
 
 
