--- a/templates/expenses/index.html
+++ b/templates/expenses/index.html
@@ -1,14 +1,18 @@
 {% extends "base.html" %}
 
 {% block content  %}
-
+{% include "partials/messages.html" %}
 <h1>Expenses List</h1>
+<div class="container">
+    <ul class="list-group">
+        <li class="list-group-item">Bought Beer</li>
+        <li class="list-group-item">Bought Beer</li>
+        <li class="list-group-item">Bought Beer</li>
+        <li class="list-group-item">Bought Beer</li>
+    </ul>
 
-<ul class="list-group">
-    <li class="list-group-item">Bought Beer</li>
-    <li class="list-group-item">Bought Beer</li>
-    <li class="list-group-item">Bought Beer</li>
-    <li class="list-group-item">Bought Beer</li>
-</ul>
+
+</div>
+
 
 {% endblock content  %}
