--- a/templates/expenses/add_expense.html
+++ b/templates/expenses/add_expense.html
@@ -1,10 +1,78 @@
 {% extends "base.html" %}
 
 
+
+
+
 {% block content  %}
 
 
 <h1>Add Expense</h1>
+<div class="container mt-4">
+
+
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item " href="{% url 'expenses' %}" aria-current="page">Home</li>
+          <li class="breadcrumb-item active" aria-current="page">Add expenses</li>
+        </ol>
+      </nav>
+
+
+
+<div class="card">
+    <div class="card-body">
+        
+<form action="{% url 'expenses' %}" method="post">
+
+        <div class="form-group">
+            <label for="">Amount</label>
+            <input type="text" class="form-control form-control-sm" name="amount">
+
+        </div>
+
+        <div class="form-group">
+            <label for="">Description</label>
+            <input type="text" class="form-control  form-control-sm" name="description">
+
+        </div>
+
+
+        
+        <div class="form-group">
+           <label for="">Category</label>
+           <select name="category" id="">
+
+<option name="category">1</option>
+
+
+           </select>
+        </div>
+
+        <div class="form-group">
+            <label for="">Date of Expenses</label>
+            <input type="date" class="form-control  form-control-sm" name="expense_date">
+        </div>
+
+        <input type="submit" value="Submit" class="btn btn-primary">
+            
+</form>
+
+    </div>
+
+    
+</div>
+
+
+
+
+
+
+
+
+
+</div>
+
 
 {% endblock content  %}
 
