--- a/templates/expenses/index.html
+++ b/templates/expenses/index.html
@@ -1,18 +1,28 @@
 {% extends "base.html" %}
 
 {% block content  %}
-{% include "partials/messages.html" %}
-<h1>Expenses List</h1>
-<div class="container">
-    <ul class="list-group">
-        <li class="list-group-item">Bought Beer</li>
-        <li class="list-group-item">Bought Beer</li>
-        <li class="list-group-item">Bought Beer</li>
-        <li class="list-group-item">Bought Beer</li>
-    </ul>
+<div class="container mt-4">
 
+<div class="row">
+<div class="col-md-10">
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"> <a href="" >Expenses</a></li>
+          <li class="breadcrumb-item active" aria-current="page">My expenses</li>
+        </ol>
+      </nav>
 
 </div>
 
+<div class="col-md-2">
 
+<a href="{% url 'add_expense' %}" class="btn btn-primary">Add Expense</a>
+
+</div>
+
+</div>
+</div>
+
+
+{% include "partials/messages.html" %}
 {% endblock content  %}
