--- a/templates/expenses/edit-expense.html
+++ b/templates/expenses/edit-expense.html
@@ -14,7 +14,7 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item " href="{% url 'expenses' %}" aria-current="page">Home</li>
-          <li class="breadcrumb-item active" aria-current="page">Add expenses</li>
+          <li class="breadcrumb-item active" aria-current="page">Edit Expenses</li>
         </ol>
       </nav>
 
@@ -59,7 +59,7 @@
             <input type="date" class="form-control  form-control-sm" name="expense_date">
         </div>
 
-        <input type="submit" value="Submit" class="btn btn-primary">
+        <input type="submit" value="Save" class="btn btn-primary">
             
 </form>
 
