--- a/templates/expenses/edit-expense.html
+++ b/templates/expenses/edit-expense.html
@@ -9,8 +9,8 @@
 
 <h1>Add Expense</h1>
 <div class="container mt-4">
-
-
+    <div class="row">
+<div class="col-md-10">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item " href="{% url 'expenses' %}" aria-current="page">Home</li>
@@ -18,12 +18,25 @@
         </ol>
       </nav>
 
+</div>
+<div class="col-md-2">
+<a href="{% url 'delete_expense' expense.id %}" class="btn btn-danger btn-sm">Delete</a>
+</div>
+
+
+
+
+    </div>
+
+
+ 
+
 
 
 <div class="card">
     <div class="card-body">
         {% include "partials/messages.html" %}
-        <form action="{% url 'add_expense' %}" method="post">
+        <form action="{% url 'expense_edit' expense.id %}" method="post">
            
     {% csrf_token %}
 
@@ -43,21 +56,28 @@
 
         
         <div class="form-group">
-           <label for="">Category</label>
-           <select class="form-control"  name="category" id="">
-{% for category in categories  %}
-
-<option name="category" value="{{category.name}}">{{category.name}}</option>
-
-{% endfor %}
-
-           </select>
+            <label for="">Category</label>
+            <select class="form-control" name="category">
+              <option selected name="category" value="{{values.category}}"
+                >{{values.category}}</option
+              >
+              {% for category in categories%}
+              <option name="category" value="{{category.name}}"
+                >{{category.name}}</option
+              >
+  
+              {% endfor %}
+            </select>
         </div>
-
         <div class="form-group">
-            <label for="">Date of Expenses</label>
-            <input type="date" class="form-control  form-control-sm" name="expense_date">
-        </div>
+            <label for="">Date of Expense</label>
+            <input
+              type="date"
+              value="{{values.date |date:'Y-m-d' }}"
+              class="form-control form-control-sm"
+              name="expense_date"
+            />
+          </div>
 
         <input type="submit" value="Save" class="btn btn-primary">
             
