--- a/templates/expenses/index.html
+++ b/templates/expenses/index.html
@@ -1,125 +1,137 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% load static %}
-
-
-
-{% block content %}
-
+{% block content  %}
 <div class="container mt-4">
-  <div class="row">
-    <div class="col-md-10">
-      <nav aria-label="breadcrumb">
+
+<div class="row">
+<div class="col-md-10">
+    <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item">
-            <a href="">Expenses</a>
-          </li>
-          <li class="breadcrumb-item active" aria-current="page">
-            My Expenses
-          </li>
+          <li class="breadcrumb-item"> <a href="" >Expenses</a></li>
+          <li class="breadcrumb-item active" aria-current="page">My expenses</li>
         </ol>
       </nav>
-    </div>
 
-    <div class="col-md-2">
-      <a href="{% url 'add_expense' %}" class="btn btn-primary">Add Expense</a>
-    </div>
-  </div>
+</div>
 
-  <div class="container">
-    {% include 'partials/messages.html' %} {% if expenses.count %}
+<div class="col-md-2">
 
-    <div class="row">
-      <div class="col-md-8"></div>
-      <div class="col-md-4">
+<a href="{% url 'add_expense' %}" class="btn btn-primary">Add Expense</a>
+</div>
+</div>
+<div class="container">
+  {% include "partials/messages.html" %}
+  {% if expense.count  %}
 
-        <div class="form-group">
-          <input type="text" class="form-control" id="searchfield" placeholder="Search">
-        </div>
+<div class="row">
+  <div class="col-md-8"></div>
+  <div class="col-md-4">
+
+    <div class="form-group">
+      <input type="text" id="searchfield" class="form-control" placeholder="Search">
+
+
       </div>
-    </div>
-<div class="app-table">
 
+
+    </div>
+ 
+</div>
+</div>
+
+<div class="app-table">
   <table class="table table-stripped table-hover">
+
+
     <thead>
+    
       <tr>
-        <th>Amount ({{currency}})</th>
+        <th>Amount {{currency}}</th>
         <th>Category</th>
         <th>Description</th>
         <th>Date</th>
-        <th></th>
+        <th>Date</th>
       </tr>
     </thead>
-
-    <tbody>
-      {% for expenses in page_obj %}
+    
+    <tbody >
+    {% for expenses in expense %}
+    
       <tr>
         <td>{{expenses.amount}}</td>
         <td>{{expenses.category}}</td>
         <td>{{expenses.description}}</td>
         <td>{{expenses.date}}</td>
-
-        <td>
-          <a
-            href="{% url 'expense_edit' expense.id  %}"
-            class="btn btn-secondary btn-sm"
-            >Edit</a
-          >
-        </td>
+        <td><a href="{% url 'expense_edit' expenses.id %}" class="btn btn-secondary btn-sm">Edit</a></td>
       </tr>
-
+    
       {% endfor %}
+    </tbody>
+    
+    
+    </table>
+
+</div>
+  
+
+
+
+
+
+<div class="table-output">
+  <table class="table table-stripped table-hover">
+
+
+    <thead>
+    
+      <tr>
+        <th>Amount {{currency}}</th>
+        <th>Category</th>
+        <th>Description</th>
+        <th>Date</th>
+        <th>Date</th>
+      </tr>
+    </thead>
+    
+    <tbody  class="table-body">
+
     </tbody>
   </table>
 </div>
 
 
-    <div class="table-output">
 
-
-      <table class="table table-stripped table-hover">
-        <thead>
-          <tr>
-            <th>Amount ({{currency}})</th>
-            <th>Category</th>
-            <th>Description</th>
-            <th>Date</th>
-            <th></th>
-          </tr>
-        </thead>
-
-        <tbody  class="table-body">
-
-
-        </tbody>
-      </table>
-    </div>
-
-
-
-
-    <div class="pagination-container">
-    <div class="">
-      Showing page {{page_obj.number}} of {{ page_obj.paginator.num_pages }}
-    </div>
-    <ul class="pagination align-right float-right mr-auto">
-      {% if page_obj.has_previous %}
-      <li {% if page_obj.number == 1 %} class="page-item active" {% endif %}><a class="page-link" href="?page=1">&laquo; 1</a></li>
-      <li class="page-item"> <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a></li>
-      {% endif %}
-
-      {% if page_obj.has_next %}
-      <li class="page-item"> <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a></li>
-      <li class="page-item"> <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages}} &raquo;</a></li>
-      {% endif %}
-
-
-      </ul>
-    {% endif %}
+<div class="pagination-container">
+  <div class="">
+    Showing page {{page_obj.number}} of {{ page_obj.paginator.num_pages }}
   </div>
-</div>
+  <ul class="pagination align-right float-right mr-auto">
+    {% if page_obj.has_previous %}
+    <li {% if page_obj.number == 1 %} class="page-item active" {% endif %}><a class="page-link" href="?page=1">&laquo; 1</a></li>
+    <li class="page-item"> <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a></li>
+    {% endif %}
+
+    {% if page_obj.has_next %}
+    <li class="page-item"> <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a></li>
+    <li class="page-item"> <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages}} &raquo;</a></li>
+    {% endif %}
+
+
+    </ul>
+
+
+
+{% endif %}
+
+
 </div>
 
-<script src="{% static 'js/searchexpenses.js' %}"></script>
+
+</div>
+
+
+
+<script src="{% static 'js/searchexpenses.js' %}">
 
 
 
@@ -128,4 +140,4 @@
 
 
 
-{% endblock content %}
+{% endblock content  %}
